// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Popover /> should render open popover withouth a problem 1`] = `
.c0 {
  position: relative;
  width: 100rem;
  padding: 1.8rem;
  border-radius: 0.4rem;
  box-shadow: 0 0.2rem 1.6rem 0 hsla(0,0%,0%,0.1),0 0.2rem 1.6rem 0 hsla(206,23%,69%,0.1), 0 0 0 0.1rem hsl(207,22%,90%);
  background: hsl(0,100%,100%);
}

.c0::before {
  content: '';
  position: absolute;
  top: -2rem;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  border-width: 1rem;
  border-style: solid;
  border-color: transparent transparent hsl(0,100%,100%) transparent;
}

<ThemeProvider
  theme={
    Object {
      "breakpoints": Object {
        "lg": 992,
        "md": 768,
        "sm": 576,
        "xl": 1200,
        "xs": 0,
      },
      "dimensions": Object {
        "big": "3.1rem",
        "bigInt": 3.1,
        "huge": "4.5rem",
        "hugeInt": 4.5,
        "medium": "1.5rem",
        "mediumInt": 1.5,
        "radius": "0.4rem",
        "radiusInt": 0.4,
        "small": "0.7rem",
        "smallInt": 0.7,
        "tiny": "0.3rem",
        "tinyInt": 0.3,
      },
      "fonts": Object {
        "family": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
        "size": Object {
          "big": "3.2rem",
          "bigInt": 3.2,
          "huge": "6.4rem",
          "hugeInt": 6.4,
          "medium": "1.2rem",
          "mediumInt": 1.2,
          "small": "0.7rem",
          "smallInt": 0.7,
          "tiny": "0.3rem",
          "tinyInt": 0.3,
        },
        "spacing": Object {
          "big": "1.5px",
          "medium": "1px",
          "small": "0.5px",
        },
        "weight": Object {
          "normal": 400,
          "thick": 600,
          "thin": 200,
        },
      },
      "palette": Object {
        "alizarin": "hsl(6, 78%, 57%)",
        "anthracite": "hsl(213, 17%, 20%)",
        "black": "hsl(0, 0%, 0%)",
        "blackLight": "hsl(213, 17%, 20%)",
        "blue": "hsl(200, 74%, 46%)",
        "bodyBackground": "hsl(218, 29%, 95%)",
        "carrot": "hsl(28, 80%, 52%)",
        "clay": "hsl(215, 17%, 26%)",
        "darkBlue": "#1c88bf",
        "darkGray": "#dbdfe6",
        "darkGreen": "#7fbf3b",
        "darkRed": "#ea6151",
        "emerald": "hsl(145, 63%, 49%)",
        "fadeBlue": "hsl(210, 50%, 98%)",
        "failure": Object {
          "back": "hsl(6, 79%, 65%)",
          "darkBack": "#ea6151",
          "darkFore": "#f7f7f7",
          "fore": "hsl(0, 100%, 100%)",
          "lightBack": "#f1978d",
          "lightFore": "#fff",
        },
        "googleBrandRed": "#ea4335",
        "gray": "hsl(218, 18%, 91%)",
        "green": "hsl(89, 53%, 52%)",
        "grey": "hsl(206, 16%, 60%)",
        "greygoose": "hsl(216, 29%, 97%)",
        "lightBlue": "#3baae2",
        "lightGray": "#fff",
        "lightGreen": "#a0d16b",
        "lightRed": "#f1978d",
        "marble": "hsl(206, 23%, 69%)",
        "orange": "hsl(34, 91%, 65%)",
        "primary": Object {
          "back": "hsl(200, 74%, 46%)",
          "darkBack": "#1c88bf",
          "darkFore": "#f7f7f7",
          "fore": "hsl(0, 100%, 100%)",
          "lightBack": "#3baae2",
          "lightFore": "#fff",
        },
        "red": "hsl(6, 79%, 65%)",
        "river": "hsl(204, 70%, 53%)",
        "sand": "hsl(214, 8%, 84%)",
        "secondary": Object {
          "back": "hsl(0, 100%, 100%)",
          "darkBack": "#f7f7f7",
          "darkFore": "#8093a3",
          "fore": "hsl(206, 16%, 60%)",
          "lightBack": "#fff",
          "lightFore": "#a6b4be",
        },
        "success": Object {
          "back": "hsl(89, 53%, 52%)",
          "darkBack": "#7fbf3b",
          "darkFore": "#f7f7f7",
          "fore": "hsl(0, 100%, 100%)",
          "lightBack": "#a0d16b",
          "lightFore": "#fff",
        },
        "turquoise": "hsl(168, 76%, 42%)",
        "white": "hsl(0, 100%, 100%)",
        "wisteria": "hsl(282, 44%, 47%)",
      },
    }
  }
>
  <Popover
    active={true}
    width="100rem"
  >
    <PoseGroup
      animateOnMount={true}
      enterPose="enter"
      exitPose="exit"
      flipMove={true}
      preEnterPose="exit"
      singleChildOnly={false}
    >
      <Component
        initialPose="exit"
        key="ContainerAnimation"
        pose="enter"
        width="100rem"
      >
        <PoseElement
          elementType={[Function]}
          initialPose="exit"
          pose="enter"
          poseConfig={
            Object {
              "enter": Object {
                "opacity": 1,
                "y": 15,
              },
              "exit": Object {
                "opacity": 0,
                "y": 30,
              },
            }
          }
          width="100rem"
        >
          <styled.div
            hostRef={[Function]}
            innerRef={[Function]}
            width="100rem"
          >
            <div
              className="c0"
              width="100rem"
            >
              Children
            </div>
          </styled.div>
        </PoseElement>
      </Component>
    </PoseGroup>
  </Popover>
</ThemeProvider>
`;

exports[`<Popover /> should render with a different width 1`] = `
<Popover
  active={false}
  theme={
    Object {
      "breakpoints": Object {
        "lg": 992,
        "md": 768,
        "sm": 576,
        "xl": 1200,
        "xs": 0,
      },
      "dimensions": Object {
        "big": "3.1rem",
        "bigInt": 3.1,
        "huge": "4.5rem",
        "hugeInt": 4.5,
        "medium": "1.5rem",
        "mediumInt": 1.5,
        "radius": "0.4rem",
        "radiusInt": 0.4,
        "small": "0.7rem",
        "smallInt": 0.7,
        "tiny": "0.3rem",
        "tinyInt": 0.3,
      },
      "fonts": Object {
        "family": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
        "size": Object {
          "big": "3.2rem",
          "bigInt": 3.2,
          "huge": "6.4rem",
          "hugeInt": 6.4,
          "medium": "1.2rem",
          "mediumInt": 1.2,
          "small": "0.7rem",
          "smallInt": 0.7,
          "tiny": "0.3rem",
          "tinyInt": 0.3,
        },
        "spacing": Object {
          "big": "1.5px",
          "medium": "1px",
          "small": "0.5px",
        },
        "weight": Object {
          "normal": 400,
          "thick": 600,
          "thin": 200,
        },
      },
      "palette": Object {
        "alizarin": "hsl(6, 78%, 57%)",
        "anthracite": "hsl(213, 17%, 20%)",
        "black": "hsl(0, 0%, 0%)",
        "blackLight": "hsl(213, 17%, 20%)",
        "blue": "hsl(200, 74%, 46%)",
        "bodyBackground": "hsl(218, 29%, 95%)",
        "carrot": "hsl(28, 80%, 52%)",
        "clay": "hsl(215, 17%, 26%)",
        "darkBlue": "#1c88bf",
        "darkGray": "#dbdfe6",
        "darkGreen": "#7fbf3b",
        "darkRed": "#ea6151",
        "emerald": "hsl(145, 63%, 49%)",
        "fadeBlue": "hsl(210, 50%, 98%)",
        "failure": Object {
          "back": "hsl(6, 79%, 65%)",
          "darkBack": "#ea6151",
          "darkFore": "#f7f7f7",
          "fore": "hsl(0, 100%, 100%)",
          "lightBack": "#f1978d",
          "lightFore": "#fff",
        },
        "googleBrandRed": "#ea4335",
        "gray": "hsl(218, 18%, 91%)",
        "green": "hsl(89, 53%, 52%)",
        "grey": "hsl(206, 16%, 60%)",
        "greygoose": "hsl(216, 29%, 97%)",
        "lightBlue": "#3baae2",
        "lightGray": "#fff",
        "lightGreen": "#a0d16b",
        "lightRed": "#f1978d",
        "marble": "hsl(206, 23%, 69%)",
        "orange": "hsl(34, 91%, 65%)",
        "primary": Object {
          "back": "hsl(200, 74%, 46%)",
          "darkBack": "#1c88bf",
          "darkFore": "#f7f7f7",
          "fore": "hsl(0, 100%, 100%)",
          "lightBack": "#3baae2",
          "lightFore": "#fff",
        },
        "red": "hsl(6, 79%, 65%)",
        "river": "hsl(204, 70%, 53%)",
        "sand": "hsl(214, 8%, 84%)",
        "secondary": Object {
          "back": "hsl(0, 100%, 100%)",
          "darkBack": "#f7f7f7",
          "darkFore": "#8093a3",
          "fore": "hsl(206, 16%, 60%)",
          "lightBack": "#fff",
          "lightFore": "#a6b4be",
        },
        "success": Object {
          "back": "hsl(89, 53%, 52%)",
          "darkBack": "#7fbf3b",
          "darkFore": "#f7f7f7",
          "fore": "hsl(0, 100%, 100%)",
          "lightBack": "#a0d16b",
          "lightFore": "#fff",
        },
        "turquoise": "hsl(168, 76%, 42%)",
        "white": "hsl(0, 100%, 100%)",
        "wisteria": "hsl(282, 44%, 47%)",
      },
    }
  }
  width="10rem"
>
  <PoseGroup
    animateOnMount={true}
    enterPose="enter"
    exitPose="exit"
    flipMove={true}
    preEnterPose="exit"
    singleChildOnly={false}
  />
</Popover>
`;

exports[`<Popover /> should render withouth a problem 1`] = `
<Popover
  active={false}
  theme={
    Object {
      "breakpoints": Object {
        "lg": 992,
        "md": 768,
        "sm": 576,
        "xl": 1200,
        "xs": 0,
      },
      "dimensions": Object {
        "big": "3.1rem",
        "bigInt": 3.1,
        "huge": "4.5rem",
        "hugeInt": 4.5,
        "medium": "1.5rem",
        "mediumInt": 1.5,
        "radius": "0.4rem",
        "radiusInt": 0.4,
        "small": "0.7rem",
        "smallInt": 0.7,
        "tiny": "0.3rem",
        "tinyInt": 0.3,
      },
      "fonts": Object {
        "family": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
        "size": Object {
          "big": "3.2rem",
          "bigInt": 3.2,
          "huge": "6.4rem",
          "hugeInt": 6.4,
          "medium": "1.2rem",
          "mediumInt": 1.2,
          "small": "0.7rem",
          "smallInt": 0.7,
          "tiny": "0.3rem",
          "tinyInt": 0.3,
        },
        "spacing": Object {
          "big": "1.5px",
          "medium": "1px",
          "small": "0.5px",
        },
        "weight": Object {
          "normal": 400,
          "thick": 600,
          "thin": 200,
        },
      },
      "palette": Object {
        "alizarin": "hsl(6, 78%, 57%)",
        "anthracite": "hsl(213, 17%, 20%)",
        "black": "hsl(0, 0%, 0%)",
        "blackLight": "hsl(213, 17%, 20%)",
        "blue": "hsl(200, 74%, 46%)",
        "bodyBackground": "hsl(218, 29%, 95%)",
        "carrot": "hsl(28, 80%, 52%)",
        "clay": "hsl(215, 17%, 26%)",
        "darkBlue": "#1c88bf",
        "darkGray": "#dbdfe6",
        "darkGreen": "#7fbf3b",
        "darkRed": "#ea6151",
        "emerald": "hsl(145, 63%, 49%)",
        "fadeBlue": "hsl(210, 50%, 98%)",
        "failure": Object {
          "back": "hsl(6, 79%, 65%)",
          "darkBack": "#ea6151",
          "darkFore": "#f7f7f7",
          "fore": "hsl(0, 100%, 100%)",
          "lightBack": "#f1978d",
          "lightFore": "#fff",
        },
        "googleBrandRed": "#ea4335",
        "gray": "hsl(218, 18%, 91%)",
        "green": "hsl(89, 53%, 52%)",
        "grey": "hsl(206, 16%, 60%)",
        "greygoose": "hsl(216, 29%, 97%)",
        "lightBlue": "#3baae2",
        "lightGray": "#fff",
        "lightGreen": "#a0d16b",
        "lightRed": "#f1978d",
        "marble": "hsl(206, 23%, 69%)",
        "orange": "hsl(34, 91%, 65%)",
        "primary": Object {
          "back": "hsl(200, 74%, 46%)",
          "darkBack": "#1c88bf",
          "darkFore": "#f7f7f7",
          "fore": "hsl(0, 100%, 100%)",
          "lightBack": "#3baae2",
          "lightFore": "#fff",
        },
        "red": "hsl(6, 79%, 65%)",
        "river": "hsl(204, 70%, 53%)",
        "sand": "hsl(214, 8%, 84%)",
        "secondary": Object {
          "back": "hsl(0, 100%, 100%)",
          "darkBack": "#f7f7f7",
          "darkFore": "#8093a3",
          "fore": "hsl(206, 16%, 60%)",
          "lightBack": "#fff",
          "lightFore": "#a6b4be",
        },
        "success": Object {
          "back": "hsl(89, 53%, 52%)",
          "darkBack": "#7fbf3b",
          "darkFore": "#f7f7f7",
          "fore": "hsl(0, 100%, 100%)",
          "lightBack": "#a0d16b",
          "lightFore": "#fff",
        },
        "turquoise": "hsl(168, 76%, 42%)",
        "white": "hsl(0, 100%, 100%)",
        "wisteria": "hsl(282, 44%, 47%)",
      },
    }
  }
  width="100rem"
>
  <PoseGroup
    animateOnMount={true}
    enterPose="enter"
    exitPose="exit"
    flipMove={true}
    preEnterPose="exit"
    singleChildOnly={false}
  />
</Popover>
`;
